# src/api/customAxios/article.ts
@@ -8,16 +8,19 @@ export const articleApi = {
       endpoint: "/v1/articles",
     });
     console.log(response.data);
+    return response.data;
   },
 
   /** 指定の記事を取得 */
   getOne: async (articleId: number) => {
     const response = await customAxios({
       methods: "get",
-      endpoint: `/v2/article/${articleId}`,
+      endpoint: "/v1/article/{id}",
+      dynamicEndpoint: `/v1/article/${articleId}`,
     });
 
     console.log(response.data);
+    return response.data;
   },
 
   /** 記事の作成 */
@@ -31,16 +34,20 @@ export const articleApi = {
       },
     });
 
-    return response.data.id;
+    console.log(response.data);
+
+    return response.data;
   },
 
   /** 記事の削除 */
   delete: async () => {
     const response = await customAxios({
       methods: "delete",
-      endpoint: "/v2/article/{id}",
+      endpoint: "/v1/article/{id}",
+      dynamicEndpoint: "/v1/article/1",
     });
+    console.log(response.data);
 
-    return response;
+    return response.data;
   },
 };
